# TrailCurrentSwitchback

./: .gitignore  CMakeLists.txt  README.md  build-all.sh  partitions.csv  platformio.ini  sdkconfig  sdkconfig.defaults
CAD/: TrailCurrentSwitchbackPcb.FCStd
CAD/CNC/: MillTrailCurrentSwitchBackEdges.nc  TrailCurrentSwitchbackPcbDrillHoles.nc
EDA/TrailCurrentSwitchback/: TrailCurrentSwitchback.kicad_pcb  TrailCurrentSwitchback.kicad_prl  TrailCurrentSwitchback.kicad_pro  TrailCurrentSwitchback.kicad_sch  fp-info-cache
EDA/TrailCurrentSwitchback/FabricationOutputs/: TrailCurrentSwitchback-B_Cu.gbr  TrailCurrentSwitchback-B_Mask.gbr  TrailCurrentSwitchback-B_Paste.gbr  TrailCurrentSwitchback-B_Silkscreen.gbr  TrailCurrentSwitchback-Edge_Cuts.gbr  TrailCurrentSwitchback-F_Cu.gbr  TrailCurrentSwitchback-F_Mask.gbr  TrailCurrentSwitchback-F_Paste.gbr  TrailCurrentSwitchback-F_Silkscreen.gbr  TrailCurrentSwitchback-NPTH.drl  TrailCurrentSwitchback-PTH.drl  TrailCurrentSwitchback-job.gbrjob
main/: CMakeLists.txt  board.h  can_handler.c  can_handler.h  discovery.c  discovery.h  main.c  ota.c  relay.c  relay.h  wifi_config.c  wifi_config.h
src/: canHelper.h  globals.h  main.cpp  wifiConfig.h
